# dioxus-admin-ui-kit

./: Cargo.toml
src/: lib.rs
src/components/: input_bool.rs  input_value.rs  mod.rs  select_enum_value.rs  select_enum_value_opt_component.rs
src/components/render_table/: mod.rs  render_table.rs  render_table_rc.rs  table_item.rs
src/types/: enum_iterator.rs  input_value.rs  input_value_opt.rs  mod.rs  select_enum_value.rs  select_enum_value_opt.rs  time_offset.rs
src/types/select_value/: mod.rs  select_value.rs  selected_value_opt.rs
src/validators/: mod.rs
