[package]
name = "dioxus-admin-ui-kit"
version = "0.7.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git" }
serde = "*"
